added loading screen and fixed scrolling bug

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../styles/aboutUs.css">
+    <link rel="stylesheet" href="../styles/loadingAnimation.css">
 </head>
 <body>
-    
+    <div class="startAnimation">
+        <img src="../photos/bmw_logo.png" alt="BMW Logo">
+    </div> 
     <nav>
        
         <div class ="logo">
