--- a/bmw-car/engines.html
+++ b/bmw-car/engines.html
@@ -4,67 +4,101 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BMW Motoren Übersicht</title>
-    <link rel="stylesheet" href="../styles/engines.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../styles/loadingAnimation.css">
+    <link rel="stylesheet" href="../styles/cars.css">
+
 </head>
 <body>
-    <header>
-        <div class="startAnimation">
+    <header class="mb-4">
+        <div class="startAnimation mb-3">
             <img src="../photos/bmw_logo.png" alt="BMW Logo">
-        </div> 
+        </div>
         <a href="../index.html">
             <img class="logo" src="../photos/bmw_logo2.png" alt="BMW Logo">
         </a>
-        <nav class="header-nav">
+        <nav class="header-nav my-3">
             <a href="index.html">Serien</a>
             <a href="engines.html">Motoren</a>
             <a href="x-models.html">X Modelle</a>
         </nav>
-        <h1>BMW X Modelle Überblick</h1>
+        <h1 class="display-5">BMW Serien Überblick</h1>
     </header>
 
-    <main>
-        <section class="grid-container">
-            <div class="grid-item">
-                <img src="../photos/bmw_3cylinder_engine.jpg" alt="BMW 1.5-Liter 3-Zylinder" class="engine-img">
-                <h2>BMW 1.5-Liter 3-Zylinder</h2>
-                <p>Ein kleiner, effizienter Motor, ideal für die BMW 1er und 2er Serie.</p>
-                <p><strong>Größte Probleme:</strong> Turboladerprobleme, Ölverbrauch.</p>
+    <main class="container py-5">
+        <section class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+            <div class="col">
+                <div class="card bg-dark text-white h-100">
+                    <img src="../photos/bmw_3cylinder_engine.jpg" alt="BMW 1.5-Liter 3-Zylinder" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">BMW 1.5-Liter 3-Zylinder</h5>
+                        <p class="card-text">Ein kleiner, effizienter Motor, ideal für die BMW 1er und 2er Serie.</p>
+                        <p><strong>Größte Probleme:</strong> Turboladerprobleme, Ölverbrauch.</p>
+                    </div>
+                </div>
             </div>
-            <div class="grid-item">
-                <img src="../photos/bmw_4cylinder_engine.jpg" alt="BMW 2.0-Liter 4-Zylinder" class="engine-img">
-                <h2>BMW 2.0-Liter 4-Zylinder</h2>
-                <p>Der Standardmotor für viele Modelle, bietet eine gute Balance aus Leistung und Effizienz.</p>
-                <p><strong>Größte Probleme:</strong> Hochdruckpumpenausfälle, Rissbildung im Zylinderkopf.</p>
+
+            <div class="col">
+                <div class="card bg-dark text-white h-100">
+                    <img src="../photos/bmw_4cylinder_engine.jpg" alt="BMW 2.0-Liter 4-Zylinder" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">BMW 2.0-Liter 4-Zylinder</h5>
+                        <p class="card-text">Der Standardmotor für viele Modelle, bietet eine gute Balance aus Leistung und Effizienz.</p>
+                        <p><strong>Größte Probleme:</strong> Hochdruckpumpenausfälle, Rissbildung im Zylinderkopf.</p>
+                    </div>
+                </div>
             </div>
-            <div class="grid-item">
-                <img src="../photos/bmw_6cylinder_engine.jpg" alt="BMW 3.0-Liter 6-Zylinder" class="engine-img">
-                <h2>BMW 3.0-Liter 6-Zylinder</h2>
-                <p>Ein leistungsstarker Motor, der für sportliche Fahrdynamik sorgt, häufig in der 3er und 5er Serie.</p>
-                <p><strong>Größte Probleme:</strong> Wasserpumpe-Ausfälle, Öllecks.</p>
+
+            <div class="col">
+                <div class="card bg-dark text-white h-100">
+                    <img src="../photos/bmw_6cylinder_engine.jpg" alt="BMW 3.0-Liter 6-Zylinder" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">BMW 3.0-Liter 6-Zylinder</h5>
+                        <p class="card-text">Ein leistungsstarker Motor, der für sportliche Fahrdynamik sorgt, häufig in der 3er und 5er Serie.</p>
+                        <p><strong>Größte Probleme:</strong> Wasserpumpe-Ausfälle, Öllecks.</p>
+                    </div>
+                </div>
             </div>
-            <div class="grid-item">
-                <img src="../photos/bmw_v8_engine.jpg" alt="BMW V8-Motor (4.4-Liter)" class="engine-img">
-                <h2>BMW V8-Motor (4.4-Liter)</h2>
-                <p>Ein mächtiger Motor für die M-Modelle und Luxuslimousinen wie die 7er Serie.</p>
-                <p><strong>Größte Probleme:</strong> Zündkerzenverschleiß, Probleme mit der Ölwanne.</p>
+
+            <div class="col">
+                <div class="card bg-dark text-white h-100">
+                    <img src="../photos/bmw_v8_engine.jpg" alt="BMW V8-Motor (4.4-Liter)" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">BMW V8-Motor (4.4-Liter)</h5>
+                        <p class="card-text">Ein mächtiger Motor für die M-Modelle und Luxuslimousinen wie die 7er Serie.</p>
+                        <p><strong>Größte Probleme:</strong> Zündkerzenverschleiß, Probleme mit der Ölwanne.</p>
+                    </div>
+                </div>
             </div>
-            <div class="grid-item">
-                <img src="../photos/bmw_v12_engine.jpg" alt="BMW V12-Motor (6.6-Liter)" class="engine-img">
-                <h2>BMW V12-Motor (6.6-Liter)</h2>
-                <p>Der ultimative Luxusmotor, der in der 7er Serie verbaut ist.</p>
-                <p><strong>Größte Probleme:</strong> Hoher Wartungsaufwand, Kraftstoffverbrauch.</p>
+
+            <div class="col">
+                <div class="card bg-dark text-white h-100">
+                    <img src="../photos/bmw_v12_engine.jpg" alt="BMW V12-Motor (6.6-Liter)" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">BMW V12-Motor (6.6-Liter)</h5>
+                        <p class="card-text">Der ultimative Luxusmotor, der in der 7er Serie verbaut ist.</p>
+                        <p><strong>Größte Probleme:</strong> Hoher Wartungsaufwand, Kraftstoffverbrauch.</p>
+                    </div>
+                </div>
             </div>
         </section>
 
-        <section class="special-engine">
-            <h2>BMW M TwinPower Turbo V8</h2>
-            <img src="../photos/bmw_m_twinpower_v8.jpg" alt="BMW M TwinPower Turbo V8" class="special-engine-img">
-            <p>Der M TwinPower Turbo V8 ist der mächtigste Motor von BMW und bietet eine beeindruckende Leistung von über 600 PS.</p>
-            <p><strong>Größte Probleme:</strong> Hoher Ölverbrauch, Überhitzung bei extremen Bedingungen.</p>
-            <p><strong>Verwendet in:</strong> BMW M5, M8, und X5 M.</p>
-            <p>Dieser Motor ist bekannt für seine unglaubliche Beschleunigung und sein dynamisches Fahrverhalten, wodurch er sowohl auf der Straße als auch auf der Rennstrecke eine Klasse für sich ist.</p>
+        <section class="mt-5">
+            <h2 class="text-center text-white mb-4">BMW M TwinPower Turbo V8</h2>
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="../photos/bmw_m_twinpower_v8.jpg" alt="BMW M TwinPower Turbo V8" class="img-fluid rounded">
+                </div>
+                <div class="col-md-6">
+                    <p>Der M TwinPower Turbo V8 ist der mächtigste Motor von BMW und bietet eine beeindruckende Leistung von über 600 PS.</p>
+                    <p><strong>Größte Probleme:</strong> Hoher Ölverbrauch, Überhitzung bei extremen Bedingungen.</p>
+                    <p><strong>Verwendet in:</strong> BMW M5, M8, und X5 M.</p>
+                    <p>Dieser Motor ist bekannt für seine unglaubliche Beschleunigung und sein dynamisches Fahrverhalten, wodurch er sowohl auf der Straße als auch auf der Rennstrecke eine Klasse für sich ist.</p>
+                </div>
+            </div>
         </section>
     </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
