fixed multiple navbar bugs

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../styles/loadingAnimation.css">
 </head>
 <body>
+    <header>
     <div class="startAnimation">
         <img src="../photos/bmw_logo.png" alt="BMW Logo">
     </div> 
@@ -29,6 +30,7 @@
             <a href="../about-us/index.html">Über uns</a>
         </li>
     </nav>
+</header>
     <h1>Wer sind wir?</h1>
     <div class="container" >
     <div class="rectangle" >
