--- a/index.html
+++ b/index.html
@@ -37,17 +37,14 @@
 
         <img class="logo" src="./photos/bmw_logo.png" alt="bmwLogo">
 
-        <img class="img" src="./photos/bmwM52024_jpg.jpg" alt="picture">
+        <video class="christmasvideo" src="./photos/BMWChristmasVideo.mp4" autoplay muted loop></video>
+        <div class="gradient-overlay"></div>
         <div class="text">
-            <h1>BMW M5 2024: Der neue Traumwagen von allen TürkInnen</h1>
-            <div class="text-content">
-                <p>Mehr Entdecken</p>
-                <a href="https://www.bmw.at/de/all-models/5-series.html">
-                    <div class="circle">
-                        <i class="icon">➔</i>
-                    </div></a>
-            </div>
+            <h1>Happy Holidays, with Love</h1>
+            <p>Gemeinsam die schönsten Momente erleben. Mit BMW seid ihr sicher unterwegs und könnt die Feiertage in vollen Zügen genießen. </p>
         </div>
+            
+            
     </div>
 
     <div id="carouselExampleCaptions" class="carousel slide">
