--- a/about-us/index.html
+++ b/about-us/index.html
@@ -34,7 +34,8 @@
     <h1>Wer sind wir?</h1>
     <div class="container" >
     <div class="rectangle" >
-        <h2>Arda Dönmez</h2>    
+        <h2>Arda Dönmez</h2>
+        <img source="../photos/Doenmez_AboutUs.jpg" alt = "Dönmez">    
         <p>Der Teamleiter des Projektes. Umfangreiche Erfahrung in Webentwicklung und Design, hat eine Vorliebe für BMW seit seiner Kindheit.
         </p>
     </div>
