picture and text arrangement added

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -26,18 +26,20 @@
         <li>
             <a href="../infos-bmw/index.html">Infos</a>
         </li>
-        <li>
-            <a href="../about-us/index.html">Über uns</a>
-        </li>
     </nav>
 </header>
     <h1>Wer sind wir?</h1>
     <div class="container" >
     <div class="rectangle" >
         <h2>Arda Dönmez</h2>
-        <img source="../photos/Doenmez_AboutUs.jpg" alt = "Dönmez">    
-        <p>Der Teamleiter des Projektes. Umfangreiche Erfahrung in Webentwicklung und Design, hat eine Vorliebe für BMW seit seiner Kindheit.
+        <p>
+            Der Teamleiter des Projektes. Umfangreiche Erfahrung in Webentwicklung und Design, hat eine Vorliebe für BMW seit seiner Kindheit.
         </p>
+        <p>
+            Weitere Beschreibung: Sein technisches Wissen und seine Führungsqualitäten machen ihn zu einer unverzichtbaren Kraft im Team.
+        </p>
+        <img src="../photos/Doenmez_AboutUs.jpg" alt = "Dönmez" class="rectangle img">    
+       
     </div>
     <div class ="rectangle">
         <h2>Kerimcan Yağci</h2>
