--- a/index.html
+++ b/index.html
@@ -47,6 +47,15 @@
             
     </div>
 
+    <div class="secondTopic">
+        <h1>Unsere Empfehlungen</h1>
+
+        <div class="firstBox">
+            <img src="./photos/ZinssatzBild.jpg" alt="">
+            <h2>ZinssatzBild</h2>
+        </div>
+    </div>
+
     <div id="carouselExampleCaptions" class="carousel slide">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-label="Slide 1" aria-current="true"></button>
