added a video for carousel and designed the first carousel

--- a/index.html
+++ b/index.html
@@ -52,7 +52,12 @@
 
         <div class="firstBox">
             <img src="./photos/ZinssatzBild.jpg" alt="">
-            <h2>ZinssatzBild</h2>
+            <div class="boxContent">
+                <br>
+                <p>Because it's Bmw.</p>
+                <h1>Jetzt 0,99%* Fixzinssatz.</h1>
+                <a class="btn btn-primary" href="https://www.bmw.at/de/index.html?clc=4g0aa010U1d02&gclsrc=aw.ds&&tl=sea-gl-AT_BMW_NC_BRAND%20EXTENSION_DEU_BG_ALO_%20_PERF_%20_SEAADW-mix-miy-.-sech-BRA_BG_BRAND%20EXTENSION_MULTI_NONE-.-p-bmw%20reihe-.-.&gad_source=1&gclid=CjwKCAiApY-7BhBjEiwAQMrrEaWEtG30n-4QQfyFrXLl0fQlgdHawe-gCTkS9Mv377sLJVllDsZJKxoClLAQAvD_BwE&gclsrc=aw.ds" role="button">Mehr erfahren</a>
+            </div>
         </div>
     </div>
 
@@ -66,14 +71,9 @@
             <div class="carousel-item active">
                 <video class="d-block w-100" src="./photos/BMW_Mainpage_video.mp4" autoplay muted loop></video>
                 <div class="carousel-caption d-md-block">
-                    <h1 id="racing">Racing</h1>
+                    <h1>Racing</h1>
                     <div class="text-content">
-                        <p>Mehr Entdecken</p>
-                        <a href="https://www.bmw-m.com/de/fastlane/motorsport/motorsport.html">
-                            <div class="circle">
-                                <i class="icon">➔</i>
-                            </div>
-                        </a>
+                        <a class="btn btn-primary" href="https://www.bmw-m.com/de/fastlane/motorsport/motorsport.html" role="button">Mehr erfahren</a>
                     </div>
                 </div>
             </div>
