--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <br>
                 <p>Because it's Bmw.</p>
                 <h1>Jetzt 0,99%* Fixzinssatz.</h1>
-                <a class="btn btn-primary" href="https://www.bmw.at/de/index.html?clc=4g0aa010U1d02&gclsrc=aw.ds&&tl=sea-gl-AT_BMW_NC_BRAND%20EXTENSION_DEU_BG_ALO_%20_PERF_%20_SEAADW-mix-miy-.-sech-BRA_BG_BRAND%20EXTENSION_MULTI_NONE-.-p-bmw%20reihe-.-.&gad_source=1&gclid=CjwKCAiApY-7BhBjEiwAQMrrEaWEtG30n-4QQfyFrXLl0fQlgdHawe-gCTkS9Mv377sLJVllDsZJKxoClLAQAvD_BwE&gclsrc=aw.ds" role="button">Mehr erfahren</a>
+                <a class="btn btn-primary" href="https://www.bmw.at/de/index.html?clc=4g0aa010U1d02&gclsrc=aw.ds&&tl=sea-gl-AT_BMW_NC_BRAND%20EXTENSION_DEU_BG_ALO_%20_PERF_%20_SEAADW-mix-miy-.-sech-BRA_BG_BRAND%20EXTENSION_MULTI_NONE-.-p-bmw%20reihe-.-.&gad_source=1&gclid=CjwKCAiApY-7BhBjEiwAQMrrEaWEtG30n-4QQfyFrXLl0fQlgdHawe-gCTkS9Mv377sLJVllDsZJKxoClLAQAvD_BwE&gclsrc=aw.ds" target="_blank" role="button">Mehr erfahren</a>
             </div>
         </div>
     </div>
@@ -73,22 +73,26 @@
                 <div class="carousel-caption d-md-block">
                     <h1>Racing</h1>
                     <div class="text-content">
-                        <a class="btn btn-primary" href="https://www.bmw-m.com/de/fastlane/motorsport/motorsport.html" role="button">Mehr erfahren</a>
+                        <a class="btn btn-primary" href="https://www.bmw-m.com/de/fastlane/motorsport/motorsport.html" target="_blank" role="button">Mehr erfahren</a>
                     </div>
                 </div>
             </div>
             <div class="carousel-item">
-                <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Second slide" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#666"></rect><text x="50%" y="50%" fill="#444" dy=".3em">Second slide</text></svg>
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Second slide label</h5>
-                    <p>Some representative placeholder content for the second slide.</p>
+                <video class="d-block w-100" src="./photos/BMWx1.mp4" autoplay muted loop></video>
+                <div class="carousel-caption d-md-block">
+                    <h1>E-Drive</h1>
+                    <div class="text-content">
+                        <a class="btn btn-primary" href="https://www.bmw.at/de/elektroauto.html#bmw-i-modelle" target="_blank" role="button">Mehr erfahren</a>
+                    </div>
                 </div>
             </div>
             <div class="carousel-item">
-                <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Third slide" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#555"></rect><text x="50%" y="50%" fill="#333" dy=".3em">Third slide</text></svg>
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
+                <video class="d-block w-100" src="./photos/BMWOffroad.mp4" autoplay muted loop></video>
+                <div class="carousel-caption d-md-block">
+                    <h1>Offraod</h1>
+                    <div class="text-content">
+                        <a class="btn btn-primary" href="https://www.bmw.com/de/freude/rebelle-rally-im-bmw-x2-durchs-offroad-abenteuer-nur-fuer-frauen.html" target="_blank" role="button">Mehr erfahren</a>
+                    </div>
                 </div>
             </div>
         </div>
