fixed picture and text wrap bug

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -32,15 +32,12 @@
     <div class="container" >
     <div class="rectangle" >
         <h2>Arda Dönmez</h2>
-        <p>
-            Der Teamleiter des Projektes. Umfangreiche Erfahrung in Webentwicklung und Design, hat eine Vorliebe für BMW seit seiner Kindheit.
-        </p>
-        <p>
-            Weitere Beschreibung: Sein technisches Wissen und seine Führungsqualitäten machen ihn zu einer unverzichtbaren Kraft im Team.
-        </p>
-        <img src="../photos/Doenmez_AboutUs.jpg" alt = "Dönmez" class="rectangle img">    
-       
-    </div>
+        <div class="rectanglecontainer">
+            <p>
+                Der Teamleiter des Projektes. Umfangreiche Erfahrung in Webentwicklung und Design, hat eine Vorliebe für BMW seit seiner Kindheit.   
+            </p>  
+            <img src="../photos/Doenmez_AboutUs.jpg" alt = "Dönmez" class="rectangle img">
+    </div></div>
     <div class ="rectangle">
         <h2>Kerimcan Yağci</h2>
         <p>BMW Liebhaber seit seinem fünften Lebensjahr, seit klein auf fahren seine Eltern BMW. Er erstellt die BMW-Modellen und Motoren Seite. Er ist 15 Jahre Alt lebt in Haid und kommt ursprünglich aus der Türkei.</p>
