--- a/about-us/index.html
+++ b/about-us/index.html
@@ -37,20 +37,30 @@
                 Der Teamleiter des Projektes. Umfangreiche Erfahrung in Webentwicklung und Design, hat eine Vorliebe für BMW seit seiner Kindheit.   
             </p>  
             <img src="../photos/Doenmez_AboutUs.jpg" alt = "Dönmez" class="rectangle img">
-    </div></div>
+        </div>
+    </div>
     <div class ="rectangle">
         <h2>Kerimcan Yağci</h2>
-        <p>BMW Liebhaber seit seinem fünften Lebensjahr, seit klein auf fahren seine Eltern BMW. Er erstellt die BMW-Modellen und Motoren Seite. Er ist 15 Jahre Alt lebt in Haid und kommt ursprünglich aus der Türkei.</p>
+        <div class="rectanglecontainer">
+            <p>BMW Liebhaber seit seinem fünften Lebensjahr, seit klein auf fahren seine Eltern BMW. Er erstellt die BMW-Modellen und Motoren Seite. Er ist 15 Jahre Alt lebt in Haid und kommt ursprünglich aus der Türkei.</p>
+            <img src="../photos/Yagci_AboutUs.jpg" alt = "Yagci" class="rectangle img">
+        </div>
     </div>
 </div>
     <div class="container" >
     <div class="rectangle">
         <h2>Rron Gashi</h2>
-        <p>17 Jahre alt,</p>
+        <div class="rectanglecontainer">
+            <p>17 Jahre alt,</p>
+            <img src="../photos/Gashi_AboutUs.jpg" alt = "Gashi" class="rectangle img">
+        </div>
     </div>
     <div class="rectangle">
         <h2>Daryan Mamsaleh</h2>
-        <p>15 Jahre alt, mit einer brennenden Begeisterung für BMW erstellt die Informations Seite auf unserer Seite.</p>
+        <div class="rectanglecontainer">
+            <p>15 Jahre alt, mit einer brennenden Begeisterung für BMW erstellt die Informations Seite auf unserer Seite.</p>
+            <img src="../photos/Mamsaleh_AboutUs.jpg" alt="Mamsaleh" class="rectangle img">
+        </div>
     </div>
 </div>
 </body>
