--- a/about-us/index.html
+++ b/about-us/index.html
@@ -28,16 +28,25 @@
         </li>
     </nav>
 </header>
-    <h1>Wer sind wir?</h1>
+    <h1>
+        Wer sind wir?
+    </h1>
     <div class="container" >
     <div class="rectangle" >
         <h2>Arda Dönmez</h2>
         <div class="rectanglecontainer">
             <p>
-                Der Teamleiter des Projektes. Umfangreiche Erfahrung in Webentwicklung und Design, hat eine Vorliebe für BMW seit seiner Kindheit.   
+                Der Teamleiter des Projektes. Er ist 17 Jahre alt und lebt in Leonding. Arda verfügt über ein umfangreiches Wissen in Webentwicklung und Design, hat eine Vorliebe für BMW seit seiner Kindheit.
+                Seine Aufgabe ist es die Startseite unserer Website zu erstellen und gestalten. Arda mag BMWs, weil diese ein Symbol für Prestige, Dynamik und sportlichkeit sind.
             </p>  
             <img src="../photos/Doenmez_AboutUs.jpg" alt = "Dönmez" class="rectangle img">
         </div>
+        <p>
+            mail: a.doenmez1@students.htl-leonding.ac.at
+        </p>
+        <p>
+            tel: +43 660 6207554
+        </p>
     </div>
     <div class ="rectangle">
         <h2>Kerimcan Yağci</h2>
@@ -63,5 +72,80 @@
         </div>
     </div>
 </div>
+<h1>
+    Wir sind für euch da – Kontaktiert uns
+</h1>
 </body>
+<div class="bottomNav">
+    <nav>
+        <li>
+            <p>Kerimcan</p>
+        </li>
+        <li>
+            <p>Arda</p>
+        </li>
+        <li>
+            <p>Rron</p>
+        </li>
+        <li>
+            <p>Daryan</p>
+        </li>
+    </nav>
+    <nav>
+        <li>
+            <p>Kerimcan</p>
+        </li>
+        <li>
+            <p>Arda</p>
+        </li>
+        <li>
+            <p>Rron</p>
+        </li>
+        <li>
+            <p>Daryan</p>
+        </li>
+    </nav>
+    <nav>
+        <li>
+            <p>Kerimcan</p>
+        </li>
+        <li>
+            <p>Arda</p>
+        </li>
+        <li>
+            <p>Rron</p>
+        </li>
+        <li>
+            <p>Daryan</p>
+        </li>
+    </nav>
+    <nav>
+        <li>
+            <p>Kerimcan</p>
+        </li>
+        <li>
+            <p>Arda</p>
+        </li>
+        <li>
+            <p>Rron</p>
+        </li>
+        <li>
+            <p>Daryan</p>
+        </li>
+    </nav>
+    <nav>
+        <li>
+            <p>Kerimcan</p>
+        </li>
+        <li>
+            <p>Arda</p>
+        </li>
+        <li>
+            <p>Rron</p>
+        </li>
+        <li>
+            <p>Daryan</p>
+        </li>
+    </nav>
+</div>
 </html>
