added 2 links and 2 contact datas for each member

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -93,58 +93,58 @@
     </nav>
     <nav>
         <li>
-            <p>Kerimcan</p>
+            <p>k.yagci@students.htl-leonding.ac.at</p>
         </li>
         <li>
-            <p>Arda</p>
+            <p>a.doenmez1@students.htl-leonding.ac.at</p>
         </li>
         <li>
-            <p>Rron</p>
+            <p>r.gashi@students.htl-leonding.ac.at</p>
         </li>
         <li>
-            <p>Daryan</p>
-        </li>
-    </nav>
-    <nav>
-        <li>
-            <p>Kerimcan</p>
-        </li>
-        <li>
-            <p>Arda</p>
-        </li>
-        <li>
-            <p>Rron</p>
-        </li>
-        <li>
-            <p>Daryan</p>
+            <p>d.mamsaleh@students.htl-leonding.ac.at</p>
         </li>
     </nav>
     <nav>
         <li>
-            <p>Kerimcan</p>
+            <p>+43 670 4068504</p>
         </li>
         <li>
-            <p>Arda</p>
+            <p>+43 660 6207554</p>
         </li>
         <li>
-            <p>Rron</p>
+            <p>+43 660 6499535</p>
         </li>
         <li>
-            <p>Daryan</p>
+            <p>+43 660 4217927</p>
         </li>
     </nav>
-    <nav>
+    <nav style ="margin-top: -20px">
         <li>
-            <p>Kerimcan</p>
+            <a href="https://www.instagram.com/_kxrim41?igsh=MWh0OWkzOWo5b2h0aw==">kxrim41</a>
         </li>
         <li>
-            <p>Arda</p>
+            <a href="https://www.instagram.com/a.dnmz2427?igsh=MWZ4b3Brc212YTUzeA==">a.dnmz2427</a>
         </li>
         <li>
-            <p>Rron</p>
+            <a href="https://www.instagram.com/rrxn.vl/profilecard/?igsh=MWF3aDBnamJlODI2cQ==">rrxn.vl</a>
         </li>
         <li>
-            <p>Daryan</p>
+            <a href="https://www.instagram.com/mamsalehdaryan?igsh=MWd4M2ZoM3ppY3Qwcg==">tschn5si</a>
+        </li>
+    </nav>
+    <nav style ="margin-top: -20px">
+        <li>
+            <a href="https://www.tiktok.com/@kxrim_ae?_t=8sMNvUkSqoq&_r=1">kxrim_ae</a>
+        </li>
+        <li>
+            <a href="https://www.tiktok.com/@a.dnmz2427?_t=8sMO1w9lHur&_r=1">a.dnmz2427</a>
+        </li>
+        <li>
+            <a href="https://www.tiktok.com/@rrxn.vl?_t=8sMNvwyAIC0&_r=1">rrxn.vl</a>
+        </li>
+        <li>
+            <a href="https://www.tiktok.com/@bunzenbrenner2?_t=8sMO2uqodUG&_r=1">bunzenbrenner2</a>
         </li>
     </nav>
 </div>
