added descriptions for each member

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -36,22 +36,17 @@
         <h2>Arda Dönmez</h2>
         <div class="rectanglecontainer">
             <p>
-                Der Teamleiter des Projektes. Er ist 17 Jahre alt und lebt in Leonding. Arda verfügt über ein umfangreiches Wissen in Webentwicklung und Design, hat eine Vorliebe für BMW seit seiner Kindheit.
-                Seine Aufgabe ist es die Startseite unserer Website zu erstellen und gestalten. Arda mag BMWs, weil diese ein Symbol für Prestige, Dynamik und sportlichkeit sind.
+                Arda ist der Teamleiter des Projekts und lebt mit 17 Jahren in Leonding. Er bringt umfangreiche Kenntnisse in Webentwicklung und Design mit und hat schon seit seiner Kindheit eine starke Vorliebe für BMWs. Seine Aufgabe ist es, die Startseite unserer Website zu erstellen und zu gestalten, wobei er besonderen Wert auf eine benutzerfreundliche und ansprechende Gestaltung legt. Arda sieht in BMWs ein Symbol für Prestige, Dynamik und sportliche Eleganz. Sein Traumwagen ist der BMW M3 G80 Competition, ein Modell, das seine Leidenschaft für leistungsstarke und stilvolle Fahrzeuge widerspiegelt. Mit seinen Fähigkeiten als Teamleiter und seiner Expertise im Webdesign ist Arda ein unverzichtbares Mitglied unseres Teams.
             </p>  
             <img src="../photos/Doenmez_AboutUs.jpg" alt = "Dönmez" class="rectangle img">
         </div>
-        <p>
-            mail: a.doenmez1@students.htl-leonding.ac.at
-        </p>
-        <p>
-            tel: +43 660 6207554
-        </p>
     </div>
     <div class ="rectangle">
         <h2>Kerimcan Yağci</h2>
         <div class="rectanglecontainer">
-            <p>BMW Liebhaber seit seinem fünften Lebensjahr, seit klein auf fahren seine Eltern BMW. Er erstellt die BMW-Modellen und Motoren Seite. Er ist 15 Jahre Alt lebt in Haid und kommt ursprünglich aus der Türkei.</p>
+            <p>
+                Kerimcan ist ein leidenschaftlicher BMW-Liebhaber seit seinem fünften Lebensjahr, da ihn die Begeisterung seiner Eltern für diese Marke schon in jungen Jahren geprägt hat. Er erstellt und gestaltet den BMW-Katalog, der von Limousinen und Coupés bis hin zu elektrischen Geländewagen reicht, und gibt einen Einblick in die verschiedenen, ikonischen Motoren von BMW, die für ihre beeindruckende Leistung bekannt sind. Kerimcan ist 15 Jahre alt, lebt in Haid und hat türkische Wurzeln. Sein Wissen und seine Fähigkeiten im Bereich BMW und Design sind für unser Team von großer Bedeutung und tragen wesentlich zum Erfolg unseres Projekts bei. Sein Traumwagen ist der BMW M5, der für ihn sowohl Luxus als auch Power widerspiegelt.
+            </p>
             <img src="../photos/Yagci_AboutUs.jpg" alt = "Yagci" class="rectangle img">
         </div>
     </div>
@@ -60,14 +55,14 @@
     <div class="rectangle">
         <h2>Rron Gashi</h2>
         <div class="rectanglecontainer">
-            <p>17 Jahre alt,</p>
+            <p>Rron erstellt die 'About Us'-Seite, auf der er jedes Teammitglied vorstellt und deren Kontaktinformationen bereitstellt. Er sorgt dafür, dass die Seite sowohl informativ als auch ansprechend gestaltet ist, um den Besuchern einen klaren Überblick über das Team zu geben. Zusätzlich arbeitet er an der Sonderwagen-Seite, die sich noch in der Entwicklung befindet. Rron hat eine große Leidenschaft für BMWs, insbesondere den BMW i8. Ihn fasziniert die innovative Technik des Fahrzeugs und vor allem die Schmetterlingstüren, die dem Wagen nicht nur ein futuristisches Design verleihen, sondern auch praktisch sind. Mitseinem kreativen Talent in der Webentwicklung trägt Rron entscheidend zum Erfolg unseres Projekts bei. </p>
             <img src="../photos/Gashi_AboutUs.jpg" alt = "Gashi" class="rectangle img">
         </div>
     </div>
     <div class="rectangle">
         <h2>Daryan Mamsaleh</h2>
         <div class="rectanglecontainer">
-            <p>15 Jahre alt, mit einer brennenden Begeisterung für BMW erstellt die Informations Seite auf unserer Seite.</p>
+            <p>Daryan ist 15 Jahre alt und besitzt eine brennende Begeisterung für BMW. Er erstellt die Informationsseite auf unserer Website, die nicht nur über BMW informiert, sondern auch die reiche Geschichte der Marke beleuchtet. Daryan lebt in Leonding und hat kurdische Wurzeln. Mit seinen beeindruckenden Webdesign-Künsten trägt er maßgeblich zur Gestaltung und Struktur unserer Seite bei. Sein Lieblingswagen ist der Rolls-Royce Phantom, da für ihn der unglaubliche Luxus dieses Fahrzeugs ausschlaggebend ist. Rolls-Royce gehört zum BMW-Konzern, was Daryans Leidenschaft für beide Marken weiter verstärkt.</p>
             <img src="../photos/Mamsaleh_AboutUs.jpg" alt="Mamsaleh" class="rectangle img">
         </div>
     </div>
@@ -78,6 +73,11 @@
 </body>
 <div class="bottomNav">
     <nav>
+        <li>
+            <p>
+                Name:
+            </p>
+        </li>
         <li>
             <p>Kerimcan</p>
         </li>
@@ -93,58 +93,110 @@
     </nav>
     <nav>
         <li>
-            <p>k.yagci@students.htl-leonding.ac.at</p>
+            <p>
+                E-Mail:
+            </p>
         </li>
         <li>
-            <p>a.doenmez1@students.htl-leonding.ac.at</p>
+            <p>
+                k.yagci@students.htl-leonding.ac.at
+            </p>
         </li>
         <li>
-            <p>r.gashi@students.htl-leonding.ac.at</p>
+            <p>
+                a.doenmez1@students.htl-leonding.ac.at
+            </p>
         </li>
         <li>
-            <p>d.mamsaleh@students.htl-leonding.ac.at</p>
+            <p>
+                r.gashi@students.htl-leonding.ac.at
+            </p>
+        </li>
+        <li>
+            <p>
+                d.mamsaleh@students.htl-leonding.ac.at
+            </p>
         </li>
     </nav>
     <nav>
         <li>
-            <p>+43 670 4068504</p>
+            <p>
+                Telefon:
+            </p>
         </li>
         <li>
-            <p>+43 660 6207554</p>
+            <p>
+                +43 670 4068504
+            </p>
         </li>
         <li>
-            <p>+43 660 6499535</p>
+            <p>
+                +43 660 6207554
+            </p>
         </li>
         <li>
-            <p>+43 660 4217927</p>
+            <p>
+                +43 660 6499535
+            </p>
+        </li>
+        <li>
+            <p>
+                +43 660 4217927
+            </p>
         </li>
     </nav>
     <nav style ="margin-top: -20px">
         <li>
-            <a href="https://www.instagram.com/_kxrim41?igsh=MWh0OWkzOWo5b2h0aw==">kxrim41</a>
+            <a>
+                Instagram:
+            </a>
         </li>
         <li>
-            <a href="https://www.instagram.com/a.dnmz2427?igsh=MWZ4b3Brc212YTUzeA==">a.dnmz2427</a>
+            <a href="https://www.instagram.com/_kxrim41?igsh=MWh0OWkzOWo5b2h0aw==">
+                kxrim41
+            </a>
         </li>
         <li>
-            <a href="https://www.instagram.com/rrxn.vl/profilecard/?igsh=MWF3aDBnamJlODI2cQ==">rrxn.vl</a>
+            <a href="https://www.instagram.com/a.dnmz2427?igsh=MWZ4b3Brc212YTUzeA==">
+                a.dnmz2427
+            </a>
         </li>
         <li>
-            <a href="https://www.instagram.com/mamsalehdaryan?igsh=MWd4M2ZoM3ppY3Qwcg==">tschn5si</a>
+            <a href="https://www.instagram.com/rrxn.vl/profilecard/?igsh=MWF3aDBnamJlODI2cQ==">
+                rrxn.vl
+            </a>
+        </li>
+        <li>
+            <a href="https://www.instagram.com/mamsalehdaryan?igsh=MWd4M2ZoM3ppY3Qwcg==">
+                tschn5si
+            </a>
         </li>
     </nav>
-    <nav style ="margin-top: -20px">
+    <nav style ="margin-top: -10px">
         <li>
-            <a href="https://www.tiktok.com/@kxrim_ae?_t=8sMNvUkSqoq&_r=1">kxrim_ae</a>
+            <a>
+                TikTok:
+            </a>
         </li>
         <li>
-            <a href="https://www.tiktok.com/@a.dnmz2427?_t=8sMO1w9lHur&_r=1">a.dnmz2427</a>
+            <a href="https://www.tiktok.com/@kxrim_ae?_t=8sMNvUkSqoq&_r=1">
+                kxrim_ae
+            </a>
         </li>
         <li>
-            <a href="https://www.tiktok.com/@rrxn.vl?_t=8sMNvwyAIC0&_r=1">rrxn.vl</a>
+            <a href="https://www.tiktok.com/@a.dnmz2427?_t=8sMO1w9lHur&_r=1">
+                a.dnmz2427
+            </a>
         </li>
         <li>
-            <a href="https://www.tiktok.com/@bunzenbrenner2?_t=8sMO2uqodUG&_r=1">bunzenbrenner2</a>
+            <a href="https://www.tiktok.com/@rrxn.vl?_t=8sMNvwyAIC0&_r=1">
+                rrxn.vl
+            </a>
+        </li>
+        <li>
+            <a href="https://www.tiktok.com/@bunzenbrenner2?_t=8sMO2uqodUG&_r=1">
+                bunzenbrenner2
+            </a>
         </li>
     </nav>
 </div>
