--- a/about-us/index.html
+++ b/about-us/index.html
@@ -147,7 +147,7 @@
     </nav>
     <nav style ="margin-top: -20px">
         <li>
-            <a>
+            <a href="https://www.instagram.com">
                 Instagram:
             </a>
         </li>
@@ -174,7 +174,7 @@
     </nav>
     <nav style ="margin-top: -10px">
         <li>
-            <a>
+            <a href="https://www.tiktok.com/de-DE/">
                 TikTok:
             </a>
         </li>
