fixed redirect problem

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -147,54 +147,54 @@
     </nav>
     <nav style ="margin-top: -20px">
         <li>
-            <a href="https://www.instagram.com">
+            <a href="https://www.instagram.com" target="_blank">
                 Instagram:
             </a>
         </li>
         <li>
-            <a href="https://www.instagram.com/_kxrim41?igsh=MWh0OWkzOWo5b2h0aw==">
+            <a href="https://www.instagram.com/_kxrim41?igsh=MWh0OWkzOWo5b2h0aw==" target="_blank">
                 kxrim41
             </a>
         </li>
         <li>
-            <a href="https://www.instagram.com/a.dnmz2427?igsh=MWZ4b3Brc212YTUzeA==">
+            <a href="https://www.instagram.com/a.dnmz2427?igsh=MWZ4b3Brc212YTUzeA==" target="_blank">
                 a.dnmz2427
             </a>
         </li>
         <li>
-            <a href="https://www.instagram.com/rrxn.vl/profilecard/?igsh=MWF3aDBnamJlODI2cQ==">
+            <a href="https://www.instagram.com/rrxn.vl/profilecard/?igsh=MWF3aDBnamJlODI2cQ==" target="_blank">
                 rrxn.vl
             </a>
         </li>
         <li>
-            <a href="https://www.instagram.com/mamsalehdaryan?igsh=MWd4M2ZoM3ppY3Qwcg==">
+            <a href="https://www.instagram.com/mamsalehdaryan?igsh=MWd4M2ZoM3ppY3Qwcg==" target="_blank">
                 tschn5si
             </a>
         </li>
     </nav>
     <nav style ="margin-top: -10px">
         <li>
-            <a href="https://www.tiktok.com/de-DE/">
+            <a href="https://www.tiktok.com/de-DE/" target="_blank">
                 TikTok:
             </a>
         </li>
         <li>
-            <a href="https://www.tiktok.com/@kxrim_ae?_t=8sMNvUkSqoq&_r=1">
+            <a href="https://www.tiktok.com/@kxrim_ae?_t=8sMNvUkSqoq&_r=1" target="_blank">
                 kxrim_ae
             </a>
         </li>
         <li>
-            <a href="https://www.tiktok.com/@a.dnmz2427?_t=8sMO1w9lHur&_r=1">
+            <a href="https://www.tiktok.com/@a.dnmz2427?_t=8sMO1w9lHur&_r=1" target="_blank">
                 a.dnmz2427
             </a>
         </li>
         <li>
-            <a href="https://www.tiktok.com/@rrxn.vl?_t=8sMNvwyAIC0&_r=1">
+            <a href="https://www.tiktok.com/@rrxn.vl?_t=8sMNvwyAIC0&_r=1" target="_blank">
                 rrxn.vl
             </a>
         </li>
         <li>
-            <a href="https://www.tiktok.com/@bunzenbrenner2?_t=8sMO2uqodUG&_r=1">
+            <a href="https://www.tiktok.com/@bunzenbrenner2?_t=8sMO2uqodUG&_r=1" target="_blank">
                 bunzenbrenner2
             </a>
         </li>
