fixed redirect issues for group member

--- a/index.html
+++ b/index.html
@@ -110,16 +110,16 @@
     <div class="bottomNav">
         <nav>
             <li>
-                <a id="instagram" href="https://www.instagram.com/bmw/"><i class="fa fa-instagram" style="font-size:45px"></i></a>
+                <a id="instagram" href="https://www.instagram.com/bmw/" target="_blank"><i class="fa fa-instagram" style="font-size:45px"></i></a>
             </li>
             <li>
-                <a id="youtube" href="https://www.youtube.com/user/BMW"><i class="fa fa-youtube-play" style="font-size:45px"></i></a>
+                <a id="youtube" href="https://www.youtube.com/user/BMW" target="_blank"><i class="fa fa-youtube-play" style="font-size:45px"></i></a>
             </li>
             <li>
-                <a id="facebook" href="https://www.facebook.com/BMW"><i class="fa fa-facebook-f" style="font-size:45px"></i></a>
+                <a id="facebook" href="https://www.facebook.com/BMW" target="_blank"><i class="fa fa-facebook-f" style="font-size:45px"></i></a>
             </li>
             <li>
-                <a id="twitter" href="https://x.com/BMW?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><i class="fa fa-twitter" style="font-size:45px"></i></a>
+                <a id="twitter" href="https://x.com/BMW?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank"><i class="fa fa-twitter" style="font-size:45px"></i></a>
             </li>
         </nav>
     </div>
