--- a/about-us/index.html
+++ b/about-us/index.html
@@ -13,18 +13,17 @@
         <img src="../photos/bmw_logo.png" alt="BMW Logo">
     </div> 
     <nav>
-       
-        <div class ="logo">
-            <img src="../photos/MColors.png" alt = "Colors">
-        </div>
         <li>
-            <a href="../index.html">Home</a>
+            <a>Home</a>
         </li>
         <li>
-            <a href="../bmw-car/index.html">Autos</a>
+            <a href="./bmw-car/index.html">Autos</a>
         </li>
         <li>
-            <a href="../infos-bmw/index.html">Infos</a>
+            <a href="./infos-bmw/index.html">Infos</a>
+        </li>
+        <li>
+            <a href="./about-us/index.html">Über uns</a>
         </li>
     </nav>
 </header>
