fixed hover problem

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -17,13 +17,13 @@
             <a>Home</a>
         </li>
         <li>
-            <a href="./bmw-car/index.html">Autos</a>
+            <a href="../bmw-car/index.html">Autos</a>
         </li>
         <li>
-            <a href="./infos-bmw/index.html">Infos</a>
+            <a href="../infos-bmw/index.html">Infos</a>
         </li>
         <li>
-            <a href="./about-us/index.html">Über uns</a>
+            <a href="../about-us/index.html">Über uns</a>
         </li>
     </nav>
 </header>
