--- a/index.html
+++ b/index.html
@@ -18,22 +18,47 @@
     </div> 
 
     <div class="main">
-        <header>
-        <nav>
-            <li>
-                <a>Home</a>
-            </li>
-            <li>
-                <a href="./bmw-car/index.html">Autos</a>
-            </li>
-            <li>
-                <a href="./infos-bmw/index.html">Infos</a>
-            </li>
-            <li>
-                <a href="./about-us/index.html">Über uns</a>
-            </li>
-        </nav>
-        </header>
+
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarScroll">
+                <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+                <li class="nav-item">
+                    <a class="nav-link" href="./about-us/index.html">Home</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Autos
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="./bmw-car/index.html">Serien</a></li>
+                      <li><a class="dropdown-item" href="./bmw-car/engines.html">Motoren</a></li>
+                      <li><a class="dropdown-item" href="./bmw-car/x-models.html">X Modelle</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="./bmw-car/index.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Infos
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="./infos-bmw/history.html">Geschichte</a></li>
+                      <li><a class="dropdown-item" href="./infos-bmw/index.html">Marken</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./about-us/index.html">Über uns</a>
+                  </li>
+                </ul>
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+              </div>
+            </div>
+          </nav>
 
         <img class="logo" src="./photos/bmw_logo.png" alt="bmwLogo">
 
