--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../styles/cars.css">
     <link rel="stylesheet" href="styles/loadingAnimation.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
@@ -16,6 +17,10 @@
     <div class="startAnimation">
         <img src="photos/bmw_logo.png" alt="BMW Logo">
     </div> 
+
+    <a href="../index.html">
+        <img class="logo" src="../photos/bmw_logo2.png" alt="BMW Logo">
+    </a>
 
     <div class="main">
 
@@ -59,8 +64,6 @@
               </div>
             </div>
           </nav>
-
-        <img class="logo" src="./photos/bmw_logo.png" alt="bmwLogo">
 
         <video class="christmasvideo" src="./photos/BMWChristmasVideo.mp4" autoplay muted loop></video>
         <div class="gradient-overlay"></div>
