--- a/bmw-car/index.html
+++ b/bmw-car/index.html
@@ -13,11 +13,9 @@
     <div class="startAnimation">
         <img src="../photos/bmw_logo.png" alt="BMW Logo">
     </div> 
-
     <a href="../index.html">
         <img class="logo" src="../photos/bmw_logo2.png" alt="BMW Logo">
     </a>
-
     <div class="main">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
@@ -34,9 +32,9 @@
                       Autos
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="./bmw-car/index.html">Serien</a></li>
-                      <li><a class="dropdown-item" href="./bmw-car/engines.html">Motoren</a></li>
-                      <li><a class="dropdown-item" href="./bmw-car/x-models.html">X Modelle</a></li>
+                      <li><a class="dropdown-item" href="index.html">Serien</a></li>
+                      <li><a class="dropdown-item" href="engines.html">Motoren</a></li>
+                      <li><a class="dropdown-item" href="x-models.html">X Modelle</a></li>
                     </ul>
                   </li>
                   <li class="nav-item dropdown">
