--- a/bmw-car/index.html
+++ b/bmw-car/index.html
@@ -6,8 +6,9 @@
     <title>BMW Serien Überblick</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../styles/loadingAnimation.css">
-    <link rel="stylesheet" href="../styles/cars.css">
     <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="../styles/cars.css">
+    <link rel="stylesheet" href="../styles/infos.css">
 </head>
 <body>
     <div class="startAnimation">
