--- a/bmw-car/special.html
+++ b/bmw-car/special.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../styles/special.css">
     <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="../styles/infos.css">
 </head>
 <body>
     <div class="startAnimation">
