Added first bootstrap

--- a/infos-bmw/index.html
+++ b/infos-bmw/index.html
@@ -61,29 +61,16 @@
 
 <main class="brands-container">
     <h2 class="section-title">Unsere Marken</h2>
-    <div class="brands-grid">
-        <article class="brand-card">
-            <img src="../photos/1er-bmw.jpg" alt="BMW" class="brand-image">
-            <div class="brand-content">
-                <h3 class="brand-name"><strong>BMW</strong></h3>
-                <p class="brand-description">
-                    BMW ist die Hauptmarke der BMW Group, die hochwertige Premiumfahrzeuge
-                    mit Fokus auf Fahrdynamik, innovative Technik und elegantes Design für
-                    vielfältige Bedürfnisse anbietet.
-                </p>
-                <div class="brand-specs">
-                    <div class="spec-item">
-                        <span>Gründung:</span>
-                        <span>1916</span>
-                    </div>
-                    <div class="spec-item">
-                        <span>Hauptsitz:</span>
-                        <span>München</span>
-                    </div>
-                </div>
-                <a href="https://www.bmw.at/de/index.html" target="_blank" class="brand-link">Mehr erfahren</a>
-            </div>
-        </article>
+    <div class="card" style="width: 45rem;">
+        <img src="../photos/iM-bmw.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">BMW</h5>
+            <p class="card-text">BMW ist die Hauptmarke der BMW Group, die hochwertige Premiumfahrzeuge
+                mit Fokus auf Fahrdynamik, innovative Technik und elegantes Design für
+                vielfältige Bedürfnisse anbietet.</p>
+            <a href="https://www.bmw.at/de/index.html" class="btn btn-primary">Mehr erfahren</a>
+        </div>
+    </div>
 
         <article class="brand-card">
             <img src="../photos/MINI.jpg" alt="MINI" class="brand-image">
