added Rolls-Royce and BMW Bike

--- a/infos-bmw/index.html
+++ b/infos-bmw/index.html
@@ -64,7 +64,7 @@
 
 <main class="brands-container">
     <div class="card" style="width: 45rem; height : 35rem;">
-        <img src="../photos/iM-bmw.jpg" class="card-img-top" alt="...">
+        <img src="../photos/BMW_Background_main.jpg" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">BMW</h5>
             <p class="card-text">BMW ist die Hauptmarke der BMW Group, die hochwertige Premiumfahrzeuge
@@ -81,6 +81,27 @@
                 individuellen Design und urbanen Charme ein einzigartiges Fahrerlebnis
                 für Stadt- und Landfahrten bieten.</p>
             <a href="https://www.mini.at/de_AT/home.html" target="_blank" class="btn btn-primary">Mehr erfahren</a>
+        </div>
+    </div>
+    <div class="card" style="width: 45rem; height: 35rem;">
+        <img src="../photos/bmw-motorrad.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">BMW Motorrad</h5>
+            <p class="card-text">BMW Motorrad ist die Motorradsparte von BMW, die hochwertige Motorräder
+                für verschiedene Einsatzbereiche wie Sport, Touring und Adventure mit
+                fortschrittlicher Technik und charakteristischem Design herstellt.</p>
+            <a href="https://www.mini.at/de_AT/home.html" target="_blank" class="btn btn-primary">Mehr erfahren</a>
+        </div>
+    </div>
+    <div class="card" style="width: 45rem; height: 35rem;">
+        <img src="../photos/rolls-royce.png" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Rolls-Royce</h5>
+            <p class="card-text">Rolls-Royce ist die Luxusmarke der BMW Group und produziert
+                handgefertigte, exklusive Fahrzeuge, die höchste Ansprüche an Qualität,
+                Komfort und Luxus erfüllen</p>
+            <a href="https://www.rolls-roycemotorcars.com/en_US/home.html" target="_blank" class="btn btn-primary">Mehr
+                erfahren</a>
         </div>
     </div>
 </main>
