fixed main page of arda

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div> 
 
     <a href="../index.html">
-        <img class="logo" src="../photos/bmw_logo2.png" alt="BMW Logo">
+        <img class="logo" src="photos/bmw_logo2.png" alt="BMW Logo">
     </a>
 
     <div class="main">
